--- a/prome-graf-ansible/roles/grafana/tasks/main.yml
+++ b/prome-graf-ansible/roles/grafana/tasks/main.yml
@@ -2,6 +2,7 @@
   yum:
     name: https://dl.grafana.com/oss/release/grafana-{{ version }}-1.x86_64.rpm
     state: latest
+    disable_gpg_check: yes
 
 - name: "Grafana configuration file copy"
   template:
